feat: release v1.0 - The Kernx Engine & Manifesto